fixed focus distortion of syntax block

--- a/css/syntax-galaxy.css
+++ b/css/syntax-galaxy.css
@@ -137,28 +137,28 @@
   justify-content: center;
   align-items: center;
 
-  position: absolute;
+  position: relative;
   transition: 0.5s ease;
-  text-align: center;
   cursor: pointer;
+  text-align: center;
   animation: reverse-orbit-rotation 40s linear infinite paused;
 }
 
 @keyframes reverse-orbit-rotation {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(0deg) scale(0.4, 1.3);
   }
   25% {
-    transform: rotate(-90deg);
+    transform: rotate(-90deg) scale(0.4, 1.3);
   }
   50% {
-    transform: rotate(-180deg);
+    transform: rotate(-180deg) scale(0.4, 1.3);
   }
   75% {
-    transform: rotate(-270deg);
+    transform: rotate(-270deg) scale(0.4, 1.3);
   }
   100% {
-    transform: rotate(-360deg);
+    transform: rotate(-360deg) scale(0.4, 1.3);
   }
 }
 
@@ -176,19 +176,19 @@
 
 @keyframes cosmos-transition {
   0% {
-    transform: rotateY(-90deg) scale(0.4, 1.25) rotate(-15deg);
+    transform: rotateY(-90deg) rotate(-15deg);
   }
   25% {
-    transform: rotateY(0deg) scale(0.45, 1.5) rotate(0deg);
+    transform: rotateY(0deg) rotate(0deg);
   }
   50% {
-    transform: rotateY(90deg) scale(0.3, 1) rotate(15deg);
+    transform: rotateY(90deg) rotate(15deg);
   }
   75% {
-    transform: rotateY(180deg) scale(0.3, 1)  rotate(0deg);
+    transform: rotateY(180deg) rotate(0deg);
   }
   100% {
-    transform: rotateY(270deg) scale(0.4, 1.25)  rotate(-15deg);
+    transform: rotateY(270deg) rotate(-15deg);
   }
 }
 
@@ -197,8 +197,8 @@
   padding: 0.5em;
   background-color: #00adff;
   border-radius: 10px;
-  height: 2.5em;
-  width: 2.5em;
+  height: 3em;
+  width: 3em;
 }
 
 .syntax-content p {
@@ -207,16 +207,16 @@
   position: absolute;
 
   background-color: #00adff;
-  border-radius: 10px;
+  border-radius: 9px;
 
   padding: 0.5em 0.7em;
-  min-width: 3em;
+  min-width: 3.7em;
 
   line-height: 1em;
   font-size: 0.8em;
   font-weight: 800;
 
-  bottom: -120%;
+  bottom: -110%;
 }
 
 .syntax-content img:hover {
